fix invetoryHistory
