# docs/swagger.json
@@ -318,11 +318,10 @@
         },
         "/categories": {
             "get": {
-                "description": "Метод позволяет получить список категорий точки",
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Список всех категорий точки",
+                "summary": "Список всех категорий организации для владельца и точки для админа/кассира",
                 "responses": {
                     "200": {
                         "description": "Возвращает массив категорий",
@@ -381,7 +380,7 @@
                         "name": "type",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/myservice.UpdateCategoryInput"
+                            "$ref": "#/definitions/myservice.CategoryUpdateFieldsInput"
                         }
                     }
                 ],
@@ -643,6 +642,73 @@
                 }
             }
         },
+        "/invetoryHistory": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Получить всю историю инвернтаризации",
+                "responses": {
+                    "200": {
+                        "description": "возвращаемый объект",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/myservice.InventoryHistoryOutputModel"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/myservice.serviceError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/myservice.serviceError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Добавить новую историю инвентаризации",
+                "parameters": [
+                    {
+                        "description": "Принимаемый объект",
+                        "name": "type",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/myservice.InventoryHistoryCreateInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "возвращает id созданной записи",
+                        "schema": {
+                            "$ref": "#/definitions/myservice.DefaultOutputModel"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/myservice.serviceError"
+                        }
+                    }
+                }
+            }
+        },
         "/orderInfo": {
             "get": {
                 "consumes": [
@@ -651,10 +717,10 @@
                 "produces": [
                     "application/json"
                 ],
-                "summary": "Получить список завершенных заказов точки (orderInfo)",
+                "summary": "Получить список завершенных заказов (orderInfo)",
                 "responses": {
                     "200": {
-                        "description": "список завершенных заказов точки",
+                        "description": "список завершенных заказов",
                         "schema": {
                             "type": "array",
                             "items": {
@@ -1426,6 +1492,14 @@
                 }
             }
         },
+        "myservice.CategoryUpdateFieldsInput": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "myservice.DefaultOutputModel": {
             "type": "object",
             "properties": {
@@ -1528,6 +1602,34 @@
                 },
                 "purchase_price": {
                     "type": "number"
+                }
+            }
+        },
+        "myservice.InventoryHistoryCreateInput": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "description": "unixmilli",
+                    "type": "integer"
+                }
+            }
+        },
+        "myservice.InventoryHistoryOutputModel": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "description": "unixmilli",
+                    "type": "integer"
+                },
+                "employee_id": {
+                    "description": "сотрудник, который делал инветаризацию",
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "outlet_id": {
+                    "type": "integer"
                 }
             }
         },
@@ -1880,14 +1982,6 @@
                     "type": "string"
                 },
                 "password": {
-                    "type": "string"
-                }
-            }
-        },
-        "myservice.UpdateCategoryInput": {
-            "type": "object",
-            "properties": {
-                "name": {
                     "type": "string"
                 }
             }
